Intial files added

--- a/src/plop-templates/Page/Page.test.js.hbs
+++ b/src/plop-templates/Page/Page.test.js.hbs
@@ -5,7 +5,7 @@ import configureMockStore from 'redux-mock-store';
 import { MemoryRouter } from 'react-router-dom';
 import {{pascalCase name}} from '../{{pascalCase name}}';
 
-describe('Designer', () => {
+describe(`{{pascalCase name}}`, () => {
   
     it('Should render correctly', () => {
        const store = {};
