--- a/src/plop-templates/Component/Component.test.js.hbs
+++ b/src/plop-templates/Component/Component.test.js.hbs
@@ -3,21 +3,15 @@ import { shallow } from 'enzyme';
 import renderer from 'react-test-renderer';
 import {{pascalCase name}} from './{{pascalCase name}}';
 
-// (1) Snapshot testing
-it('Should render correctly', () => {
-  const component = renderer.create(<{{pascalCase name}} />);
-  const tree = component.toJSON();
-  expect(tree).toMatchSnapshot();
-});
+describe({{pascalCase name}}, () => {
+    it('Should render correctly', () => {
+      const component = renderer.create(<{{pascalCase name}} />);
+      const tree = component.toJSON();
+      expect(tree).toMatchSnapshot();
+    });
 
-// (2) Checking DOM element
-it('Should have single div', () => {
-  const component = shallow(<{{pascalCase name}} />);
-  expect(component.find('div').length).toBe(1);
-});
-
-// (3) Checking class
-it('Should have the correct class name', () => {
-  const component = shallow(<{{pascalCase name}} className="{{pascalCase name}}" />);
-  expect(component.find('div').hasClass('{{pascalCase name}}')).toBe(true);
+    it('Should have the correct class name', () => {
+      const component = shallow(<{{pascalCase name}} className="{{camelCase name}}" />);
+      expect(component.find('div').hasClass('{{camelCase name}}')).toBe(true);
+    });
 });
