updated the component

--- a/src/plop-templates/ComponentStateFull/Component.js.hbs
+++ b/src/plop-templates/ComponentStateFull/Component.js.hbs
@@ -1,4 +1,4 @@
-import React, { useState, useEffect, useContext } from 'react';
+import { useState, useEffect } from 'react';
 import PropTypes from 'prop-types';
 import './{{pascalCase name}}.scss';
 
@@ -13,11 +13,11 @@ const {{pascalCase name}} = (props) => {
   );
 };
 
-{{pascalCase name}}.defaultProps = {
+{{pascalCase name}}.propTypes = {
 
 };
 
-{{pascalCase name}}.propTypes = {
+{{pascalCase name}}.defaultProps = {
 
 };
 
