--- a/src/plop-templates/Component/Component.test.js.hbs
+++ b/src/plop-templates/Component/Component.test.js.hbs
@@ -1,17 +1,19 @@
-import React from 'react';
-import { shallow } from 'enzyme';
-import renderer from 'react-test-renderer';
-import {{pascalCase name}} from './{{pascalCase name}}';
+import mount from "@test";
+import renderer from "react-test-renderer";
+import {{pascalCase name}} from '../{{pascalCase name}}';
 
 describe({{pascalCase name}}, () => {
-    it('Should render correctly', () => {
-      const component = renderer.create(<{{pascalCase name}} />);
-      const tree = component.toJSON();
-      expect(tree).toMatchSnapshot();
+  const component = mount(<{{pascalCase name}} />);
+
+   it("renders without crashing", () => {
+        expect(component).toBeTruthy();
+        const componentRender = renderer.create(<{{pascalCase name}} />);
+        const tree = componentRender.toJSON();
+        expect(tree).toMatchSnapshot();
     });
 
     it('Should have the correct class name', () => {
-      const component = shallow(<{{pascalCase name}} className="{{camelCase name}}" />);
-      expect(component.find('div').hasClass('{{camelCase name}}')).toBe(true);
+      expect(component.find('{{camelCase name}}')).toEqual(1);
     });
+
 });
